# chapter_checker

./: Cargo.toml  build_and_move_binary_to_mybin.sh
data/: data.json
src/: common_fn.rs  data.json  data.rs  lib.rs  main.rs  structs_and_types.rs
src/handler/: asura.rs  flamescans.rs  lnreader.rs  manganato.rs  mangareader.rs  manhuanaus.rs  manhuatop.rs  manhwafreak.rs  mod.rs  professor.rs  webtoon.rs  wuxiax.rs
src/manga_handlers/: asura.rs  manganato.rs  mod.rs
